--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .practice {
     border: 2px solid red;
     background-color: #9b6e6e;
-    width: 80%;
+    width: 80vw;
     height: 20vh;
     margin-left: auto;
     margin-right: auto;
@@ -31,9 +31,30 @@
     color: white;
 }
 
+.content3 {
+    border: 2px solid yellow;
+    margin-top: 1rem;
+    background-color: #9b6e6e;
+    width: 35vw;
+    height: 40vh;
+    margin-left: 10vw;
+}
+
 .leftcontent {
     border: 2px solid blue;
-    width: 8vw;
-    height: 80vh;
-    float: left;
+    width: 7vw;
+    height: 100vh;
+    position: absolute;
+}
+
+.rightcontent {
+    border: 2px solid red;
+    width: 7vw;
+    height: 100vh;
+    position: absolute;
+    margin-left: 93%;
+}
+
+.articles {
+    justify-content: space-between;
 }
