--- a/style.css
+++ b/style.css
@@ -9,26 +9,29 @@
 
 #leftbar{
     border: 2px solid red;
+    background-color: #9b6e6e;
     width: 7vw;
     height: 100vh;
     display: flex;
-    position: absolute;
+    position: fixed;
 }
 
 #rightbar{
     border: 2px solid blue;
+    background-color: #9b6e6e;
     width: 7vw;
     height: 100vh;
     display: flex;
-    position: absolute;
+    position: fixed;
     margin-left: 93vw;
 }
 
-.center{
+#center{
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 2%;
     display: flex;
+    max-height: 150px;
 }
 
 .header{
@@ -58,13 +61,15 @@
     text-align: center;
 }
 
+
 .article{
-    border: 2px solid pink;
-    width: 1000px;
-    height: 300px;
-    display: flex;
-    position: absolute;
+    border: 2px solid green;
+    width: 80vw;
+    height: 20vh;
+    margin: 0 auto;
     margin-left: auto;
     margin-right: auto;
-
+    display:inline-flex;
+    justify-content: center;
+    align-items: center;
 }
