--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     margin-left: 93vw;
 }
 
-#center{
+.center-header{
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 2%;
@@ -44,6 +44,7 @@
     display:inline-flex;
     justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .content{
@@ -59,17 +60,29 @@
     margin-top: auto;
     margin-bottom: auto;
     text-align: center;
+    overflow-x: hidden;
 }
 
+#center-body{
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 2%;
+    display: flex;
+    max-height: 500px;
+}
 
 .article{
     border: 2px solid green;
-    width: 80vw;
-    height: 20vh;
     margin: 0 auto;
+    width: 80vw;
     margin-left: auto;
     margin-right: auto;
-    display:inline-flex;
     justify-content: center;
-    align-items: center;
+}
+
+.img{
+    width: 477px;
+    height: 357px;
+    margin-right: auto;
+    display:flex;
 }
