--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@
     padding: 0 2%;
     display: flex;
     max-height: 150px;
-    overflow-y: hidden;
 }
 
 .header{
@@ -45,7 +44,6 @@
     display:inline-flex;
     justify-content: center;
     align-items: center;
-    overflow-y: hidden;
 }
 
 .content{
@@ -61,16 +59,14 @@
     margin-top: auto;
     margin-bottom: auto;
     text-align: center;
-    overflow-y: hidden;
 }
 
 #center-body{
     max-width: 1100px;
-    margin: 0 auto;
+    margin: 5vh auto;
     padding: 0 2%;
     display: flex;
     max-height: 500px;
-    overflow-y: hidden;
 }
 
 .article{
@@ -80,7 +76,6 @@
     margin-left: auto;
     margin-right: auto;
     justify-content: center;
-    overflow-y: hidden;
 }
 
 .img{
