--- a/style.css
+++ b/style.css
@@ -28,10 +28,10 @@
 
 .center-header{
     max-width: 1100px;
-    margin: 0vh auto 4vh auto;
+    margin: 0 auto;
     padding: 0 2%;
     display: flex;
-    max-height: 150px;
+    max-height: 20vh;
 }
 
 .header{
