--- a/style.css
+++ b/style.css
@@ -48,11 +48,12 @@
 
 .content{
     border: 2px solid green;
-    width: 150px;
-    height: 100px;
+    width: 10vw;
+    height: 15vh;
     background: blue;
     color: white;
     padding: 10px;
+    display: flex;
     margin: 200px;
     margin-left: auto;
     margin-right: auto;
