--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     height: 100%;
     width: 100%;
     overflow-x: hidden;
+    background-color: #f0ffff;
 }
 
 #leftbar{
@@ -14,6 +15,23 @@
     height: 100vh;
     display: flex;
     position: fixed;
+}
+
+.socialmedias{
+    display: block;
+    padding: 0px 5px;
+    overflow-y: hidden;
+}
+
+li{
+    margin-bottom: 100px;
+    margin-top: 100px;
+}
+
+.icon{
+    border: 2px solid purple;
+    width: 7w;
+    height: 7vh;
 }
 
 #rightbar{
@@ -28,17 +46,17 @@
 
 .center-header{
     max-width: 1100px;
+    height: 130px;
     margin: 0 auto;
     padding: 0 2%;
     display: flex;
-    max-height: 20vh;
 }
 
 .header{
     border: 2px solid red;
     background: #9b6e6e;
     width: 80vw;
-    height: 20vh;
+    height: 13;
     margin-left: auto;
     margin-right: auto;
     display:inline-flex;
@@ -46,9 +64,15 @@
     align-items: center;
 }
 
+.logo-img{
+    margin-right: auto;
+    margin-left: auto;
+    display:flex;
+}
+
 .content{
     border: 2px solid green;
-    width: 25vw;
+    width: 15vw;
     height: 15vh;
     background: blue;
     color: white;
@@ -56,7 +80,6 @@
     display: flex;
     margin:auto;
     text-align: center;
-    flex-wrap: wrap;
     overflow-y: hidden;
     font-size: 16px;
 }
@@ -83,7 +106,6 @@
     height: 357px;
     margin-right: auto;
     display:flex;
-}
 
 @media screen and (max-width: 568px){
     .content{
